grammar.js
    source_file: ($) => repeat(choice($._statement, $._terminator)),

    _terminator: ($) => choice("\n", ";", "\r\n"),

    identifier: ($) => /[a-z_][a-zA-Z0-9_]*[!?!]?/,
    type_identifier: ($) => /[A-Z][a-zA-Z0-9_]*/,
    instance_variable: ($) => /@[a-z_][a-zA-Z0-9_]*/,

    integer_literal: ($) =>
      choice(
        /0x[0-9a-fA-F_]+(_?[a-zA-Z0-9]+)?/,
        /0b[01_]+(_?[a-zA-Z0-9]+)?/,
        /0o[0-7_]+(_?[a-zA-Z0-9]+)?/,
        /[0-9][0-9_]*(_?[a-zA-Z0-9]+)?/,
      ),

    string_literal: ($) =>
      token(
        seq(
          '"',
          repeat(
            choice(
              /[^"\\#]+/,
              /#+[^{"\\#]/,
              /\\./,
              seq("#{", /[^}\n]+/, "}"),
            ),
          ),
          '"',
        ),
      ),

    _type: ($) =>
      choice(
        $.type_identifier,
        $.identifier,
        $.qualified_type,
        $.generic_type,
        $.pointer_type,
        $.nilable_type,
        $.fixed_array_type,
        $.function_type,
        $.parenthesized_type,
        "self",
      ),

    class_declaration: ($) =>
      seq(
        "class",
        field("name", $.type_identifier),
        optional($.generic_parameters),
        optional(seq("<", field("superclass", $._type))),
        $._terminator,
        repeat(seq(optional($._statement), $._terminator)),
        "end",
      ),

    method_declaration: ($) =>
      seq(
        optional(choice("abstract", "external")),
        "def",
        optional("self."),
        field("name", choice($.identifier, $.type_identifier, $.operator_name, seq($.identifier, "="))),
        optional($.generic_parameters),
        optional(
          choice(
            seq("(", optional($.parameter_list), ")"),
            $.parameter_list,
          ),
        ),
        optional(seq("->", field("return_type", $._type))),
        optional(
          seq(
            $._terminator,
            repeat(seq(optional($._statement), $._terminator)),
            repeat($.rescue_clause),
            optional($.ensure_clause),
            "end",
          ),
        ),
      ),

    parameter_list: ($) => commaSep1($.parameter),

    parameter: ($) =>
      seq(
        optional("&"),
        field("name", choice($.identifier, $.type_identifier, $.instance_variable)),
        optional(seq(":", field("type", $._type))),
        optional(seq("=", field("default", $.expression))),
      ),

    // Statements
    _statement: ($) =>
      choice(
        $._declaration,
        $.variable_declaration,
        $.conditional_statement,
        $.while_statement,
        $.until_statement,
        $.for_statement,
        $.return_statement,
        $.break_statement,
        $.next_statement,
        $.expression_statement,
      ),

    expression_statement: ($) => $.expression,

    expression: ($) => $._simple_expression,

    _simple_expression: ($) =>
      choice(
        $.identifier,
        $.type_identifier,
        $.instance_variable,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.nil_literal,
        $.string_literal,
        $.char_literal,
        $.symbol_literal,
        $.self_expression,
        $.super_expression,
        $.parenthesized_expression,
        $.array_literal,
        $.hash_literal,
        $.block_expression,
        $.binary_expression,
        $.unary_expression,
        $.assignment,
        $.call_expression,
        $.member_expression,
        $.index_expression,
        $.conditional_expression,
        $.case_expression,
        $.begin_expression,
        $.raise_expression,
        // $.sizeof_expression,
        $.compile_time_expression,
        $.section_expression,
        $.dot_call_expression,
        $.jsx_element,
      ),

    block_argument: ($) =>
      seq(
        choice(
          seq(
            "do",
            optional(seq("|", commaSep1($.parameter), "|")),
            repeat(seq(choice($._statement, $._terminator))),
            "end",
          ),
          seq(
            "{",
            optional(seq("|", commaSep1($.parameter), "|")),
            repeat(seq(choice($._statement, $._terminator))),
            "}",
          ),
        ),
      ),

    binary_expression: ($) =>
      choice(
        prec.left(PREC.ASSIGNMENT, seq($.expression, "=", $.expression)),
        prec.left(PREC.FAT_ARROW, seq($.expression, "=>", $.expression)),
        prec.right(PREC.TERNARY, seq($.expression, "?", $.expression, ":", $.expression)),
        prec.left(PREC.RANGE, seq($.expression, choice("..", "..."), $.expression)),
        prec.left(PREC.OR, seq($.expression, choice("||", "or"), $.expression)),
        prec.left(PREC.AND, seq($.expression, choice("&&", "and"), $.expression)),
        prec.left(PREC.EQUALITY, seq($.expression, choice("==", "!=", "<=>", "==="), $.expression)),
        prec.left(PREC.PIPELINE, seq($.expression, "|>", $.expression)),
        prec.right(PREC.PIPELINE, seq($.expression, "<|", $.expression)),
        prec.left(PREC.RELATIONAL, seq($.expression, choice("<", ">", "<=", ">="), $.expression)),
        prec.left(PREC.BITWISE_OR, seq($.expression, "|", $.expression)),
        prec.left(PREC.BITWISE_XOR, seq($.expression, "^", $.expression)),
        prec.left(PREC.BITWISE_AND, seq($.expression, "&", $.expression)),
        prec.left(PREC.SHIFT, seq($.expression, choice("<<", ">>"), $.expression)),
        prec.left(PREC.ADDITIVE, seq($.expression, choice("+", "-"), $.expression)),
        prec.left(PREC.MULTIPLICATIVE, seq($.expression, choice("*", "/", "%"), $.expression)),
        prec.right(PREC.EXPONENTIAL, seq($.expression, "**", $.expression)),
      ),

    assignment: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          field("target", choice($.identifier, $.instance_variable, $.member_expression, $.index_expression)),
          choice("=", "+=", "-=", "*=", "/=", "%=", "**=", "&=", "|=", "^=", "<<=", ">>="),
          field("value", $.expression),
        ),
      ),

    call_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("callee", $.expression),
          choice(
            seq("(", optional(commaSep1(choice($.named_argument, $.expression))), ")", optional($.block_argument)),
            $.block_argument,
          ),
        ),
      ),

    member_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("object", $.expression),
          choice(".", "::"),
          field("property", choice($.identifier, $.type_identifier)),
        ),
      ),
